new-prod/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: shark
spec:
  replicas: 5
  strategy:
    blueGreen: null
    canary:
      canaryService: shark-preview # our created canary service
      stableService: shark # our created stable service
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: shark-http-https # our created httproute
            namespace: new-prod # namespace where this rollout resides.
      steps:
      - setWeight: 20
      - pause:
          duration: 10s
      - setWeight: 40
      - pause:
          duration: 10s
      - setWeight: 60
      - pause:
          duration: 10s
      - setWeight: 80
      - pause:
          duration: 10s
      - setWeight: 100
