new-prod/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shark-http-https
spec:
  hostnames:
  - prod-shark.ashwingowda.com
  parentRefs:
  - kind: Gateway
    name: new-prod-gtw
    sectionName: https
  rules:
  - backendRefs:
    - name: new-prod-shark
      namespace: new-prod
      port: 80
    # - name: new-prod-shark-preview
    #   namespace: new-prod
    #   port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
  - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
