new-prod/httproute-preview-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shark-preview-http-https
spec:
  hostnames:
  - prod-shark-preview.ashwingowda.com
  parentRefs:
  - kind: Gateway
    name: new-prod-gtw
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: new-prod-shark-preview
      namespace: new-prod
      port: 80
