new-prod/new-prod-shark-preview-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shark-preview-http-https
  namespace: prod
spec:
  parentRefs:
    # - name: staging-gtw
    #   sectionName: http
    #   kind: Gateway
    - name: new-prod-gtw
      sectionName: https
      kind: Gateway
  hostnames:
    - prod-shark-preview.ashwingowda.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: shark-preview
          namespace: new-prod
          port: 80
