new-prod/prod-vote-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shark-http-https
  namespace: new-prod
spec:
  parentRefs:
    # - name: staging-gtw
    #   sectionName: http
    #   kind: Gateway
    - name: prod-gtw
      sectionName: https
      kind: Gateway
  hostnames:
    - prod-shark.ashwingowda.com
    
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: shark
          namespace: new-prod
          port: 80

        - name: shark-preview
          namespace: new-prod
          port: 80
